# design-patterns-cpp

./: CMakeLists.txt  readme.adoc
.devcontainer/: Dockerfile  devcontainer.json
src/patterns/adapter/: AdvancedMediaPlayer.h  CMakeLists.txt  Main.cpp  MediaAdapter.cpp  MediaAdapter.h  MediaPlayer.h  Mp4Player.cpp  Mp4Player.h  VlcPlayer.h
src/patterns/composite/: CMakeLists.txt  Chassis.cpp  Chassis.h  Engine.cpp  Engine.h  VehicleAssembly.cpp  VehicleAssembly.h  VehiclePart.h  Wheel.cpp  Wheel.h  main.cpp
src/patterns/factory/: CMakeLists.txt  Main.cpp
src/patterns/templatemethod/: CMakeLists.txt  InStoreOrderProcessor.cpp  InStoreOrderProcessor.h  Main.cpp  OnlineOrderProcessor.cpp  OnlineOrderProcessor.h  OrderProcessor.h  PhoneOrderProcessor.cpp  PhoneOrderProcessor.h
uml/: composite-pattern.drawio  composite-pattern.puml
